Fixed spacing for footer on responsive layout.

--- a/css/style.css
+++ b/css/style.css
@@ -82,12 +82,10 @@ body {
 }
 .footer {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
 
     justify-content: center;
     align-items: center;
-
-    gap: 0.5rem;
 
     color: white;
     background-color: var(--page-background);
@@ -98,6 +96,16 @@ body {
     background-size:contain;
     padding-top: 65px;
     padding-bottom: 10px;
+}
+.footer-item {
+    display: flex; 
+    flex-direction: row; 
+    
+    justify-content: center; 
+    align-items: center; 
+    gap: 0.5rem;
+
+    margin: 0px 20px;
 }
 
 .logo {
